istio/web-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-ui
  labels:
    app: web-ui
spec:
  ports:
  - name: http
    port: 9001
  selector:
    app: web-ui
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web-ui
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web-ui
        version: v1
    spec:
      containers:
      - name: web-ui
        image: vnoronha/grpc-web-istio-demo:web-ui
        imagePullPolicy: Always
        ports:
        - containerPort: 9001
